--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "start": "node build/index.js"
   },
   "devDependencies": {
+    "@types/express": "^4.17.18",
+    "@types/mysql": "^2.15.21",
     "@types/tedious": "^4.0.12",
     "@typescript-eslint/eslint-plugin": "^6.7.0",
     "@typescript-eslint/parser": "^6.7.0",
@@ -18,8 +20,10 @@
   },
   "dependencies": {
     "@types/shortid": "^0.0.29",
+    "express": "^4.18.2",
     "fp-ts": "^2.16.1",
     "module-alias": "^2.2.3",
+    "mysql": "^2.18.1",
     "reflect-metadata": "^0.1.13",
     "shortid": "^2.2.16",
     "tedious": "^16.4.0",
