--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "start": "node build/index.js"
   },
   "devDependencies": {
+    "@types/body-parser": "^1.19.3",
     "@types/express": "^4.17.18",
+    "@types/morgan": "^1.9.5",
     "@types/mysql": "^2.15.21",
     "@types/tedious": "^4.0.12",
     "@typescript-eslint/eslint-plugin": "^6.7.0",
@@ -20,14 +22,17 @@
   },
   "dependencies": {
     "@types/shortid": "^0.0.29",
+    "body-parser": "^1.20.2",
     "express": "^4.18.2",
     "fp-ts": "^2.16.1",
     "module-alias": "^2.2.3",
+    "morgan": "^1.10.0",
     "mysql": "^2.18.1",
     "reflect-metadata": "^0.1.13",
     "shortid": "^2.2.16",
     "tedious": "^16.4.0",
-    "tsyringe": "^4.8.0"
+    "tsyringe": "^4.8.0",
+    "zod": "^3.22.2"
   },
   "_moduleAliases": {
     "@": "build"
