--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "devDependencies": {
     "@types/body-parser": "^1.19.3",
     "@types/express": "^4.17.18",
+    "@types/lodash": "^4.14.199",
     "@types/morgan": "^1.9.5",
     "@types/mysql": "^2.15.21",
+    "@types/shortid": "^0.0.29",
     "@types/tedious": "^4.0.12",
     "@typescript-eslint/eslint-plugin": "^6.7.0",
     "@typescript-eslint/parser": "^6.7.0",
@@ -21,10 +23,10 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
-    "@types/shortid": "^0.0.29",
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
     "fp-ts": "^2.16.1",
+    "lodash": "^4.17.21",
     "module-alias": "^2.2.3",
     "morgan": "^1.10.0",
     "mysql": "^2.18.1",
