--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
     "fp-ts": "^2.16.1",
+    "http-status-codes": "^2.3.0",
     "lodash": "^4.17.21",
     "module-alias": "^2.2.3",
     "morgan": "^1.10.0",
